Tudo passa nem que seja por cima de você!

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Model/__pycache__/PessoaModelAbstract.cpython-312.pyc
 Model/__pycache__/UsuarioModel.cpython-312.pyc
 View/__pycache__/__init__.cpython-312.pyc
 View/__pycache__/MenuView.cpython-312.pyc
+View/__pycache__/LoginView.cpython-312.pyc
