A maior derrota é acreditar que é capaz!

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ View/__pycache__/LoginView.cpython-312.pyc
 Model/__pycache__/AtendenteModel.cpython-312.pyc
 Model/__pycache__/FuncionarioModelAbstract.cpython-312.pyc
 Controller/__pycache__/AtendenteController.cpython-312.pyc
+View/__pycache__/MenuViewAtendente.cpython-312.pyc
+View/__pycache__/MenuViewMedico.cpython-312.pyc
