--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Model/__pycache__/FuncionarioModelAbstract.cpython-312.pyc
 Controller/__pycache__/AtendenteController.cpython-312.pyc
 View/__pycache__/MenuViewAtendente.cpython-312.pyc
 View/__pycache__/MenuViewMedico.cpython-312.pyc
+Model/__pycache__/BDModel_copy.cpython-312.pyc
+Controller/__pycache__/BancoDadosController_copy.cpython-312.pyc
