--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ View/__pycache__/MenuViewMedico.cpython-312.pyc
 Model/__pycache__/BDModel_copy.cpython-312.pyc
 Controller/__pycache__/BancoDadosController_copy.cpython-312.pyc
 Model/__pycache__/TabelaModel.cpython-312.pyc
+Consultorio.db
